add crud for user and responses for swagger
